--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -4,6 +4,17 @@ body
     font-family: 'Mulish', sans-serif
     color: $font-color
     background-color: $secondary
+    display: block
+    margin: 0px
+    padding: 0px
+    overflow-x: hidden
+    width: 100%
+html
+    display: block
+    margin: 0px
+    padding: 0px
+    overflow-x: hidden
+    width: 100%
 .container
     max-width: 1110px
     margin: auto
